unpackaged/main/default/objects/project_cloud__Allocation_Group__c/project_cloud__Allocation_Group__c.object-meta.xml
<CustomObject>
    <label>Allocation Group</label>
    <nameField>
        <displayFormat>AG-{0000000000}</displayFormat>
        <label>Allocation Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>