unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Allocated_Override_Load__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocated_Override_Load__c</fullName>
    <label>Allocated Override Load</label>
    <summarizedField>project_cloud__Allocation__c.project_cloud__Load_Override__c</summarizedField>
    <summaryForeignKey>project_cloud__Allocation__c.project_cloud__Allocation_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>