unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Allocation_Summary__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocation_Summary__c</fullName>
    <inlineHelpText>Allocation Summary is in a Master-Detail relationship with Allocation Group. Allocation Summary is a grouping of all Allocation Groups and represents the sum of all Allocations.</inlineHelpText>
    <label>Allocation Summary</label>
    <referenceTo>project_cloud__Allocation_Summary__c</referenceTo>
    <relationshipLabel>Allocation Groups</relationshipLabel>
    <relationshipName>Allocation_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>