unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Balanced_Hours_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Balanced_Hours_Day__c</fullName>
    <formula>project_cloud__Allocation_Summary__r.project_cloud__Hours_Day__c * (BLANKVALUE(project_cloud__Load_Override__c, project_cloud__Allocation_Summary__r.project_cloud__Load_Unit__c) * (1.0 - MIN(project_cloud__Allocated_Override_Load__c, 1.0)))</formula>
    <inlineHelpText>The hours per day calculated based upon the Allocation Group field Load (Calculated) and the total number of estimated hours on the parent Project Task.</inlineHelpText>
    <label>Balanced Hours Per Day (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>