unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <formula>project_cloud__Allocation_Summary__r.project_cloud__End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The end date of the Allocation Group record, calculated by the Calculated End Date of the related Project Task.</inlineHelpText>
    <label>End (Calculated)</label>
    <type>Date</type>
</CustomField>