unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Fully_Allocated__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Fully_Allocated__c</fullName>
    <formula>project_cloud__Total_Subscriptions__c &gt; 0 || project_cloud__Allocated_Override_Load__c &gt;= 1.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if the Allocation Group has been fully allocated</inlineHelpText>
    <label>Fully Allocated</label>
    <type>Checkbox</type>
</CustomField>