unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Worked__c</fullName>
    <inlineHelpText>A rollup of the hours entered against the Project Task by all users within the Work Type</inlineHelpText>
    <label>Hours Worked</label>
    <summarizedField>project_cloud__Allocation__c.project_cloud__Hours_Worked__c</summarizedField>
    <summaryForeignKey>project_cloud__Allocation__c.project_cloud__Allocation_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>