unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__isPrimary__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__isPrimary__c</fullName>
    <formula>project_cloud__Allocation_Summary__r.project_cloud__Project_Task__r.project_cloud__Work_Type__c == project_cloud__Work_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Work Type is the primary, achieved by setting the Project Task --&gt; Work Type lookup, the field will resolve to True</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>