unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__IsWeekly__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsWeekly__c</fullName>
    <formula>If(ISBLANK(project_cloud__Allocation_Summary__r.project_cloud__Project__c), false, project_cloud__Allocation_Summary__r.project_cloud__Project__r.project_cloud__IsWeekly_Assignments__c)</formula>
    <inlineHelpText>When true, time based assignments can only be a single week (Sun - Sat)</inlineHelpText>
    <label>Are Assignments Weekly</label>
    <type>Checkbox</type>
</CustomField>