unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Load__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Load__c</fullName>
    <formula>IF(ISBLANK(project_cloud__Load_Override__c), MAX(1 - project_cloud__Allocation_Summary__r.project_cloud__Allocated_Override_Load__c, 0) / project_cloud__Allocation_Summary__r.project_cloud__Balanced_Allocations__c, project_cloud__Load_Override__c)</formula>
    <inlineHelpText>The calculated load % based upon the total number of work types assigned to a Project Task. References Load (Override) if the percent split has been manually adjusted.</inlineHelpText>
    <label>Load (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>