unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Load_Override__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Load_Override__c</fullName>
    <inlineHelpText>Manual override of the Load (Calculated) field</inlineHelpText>
    <label>Load (Override)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>