unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Placeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Placeholder_Name__c</fullName>
    <description>Placeholder allocation group name</description>
    <label>Placeholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>