unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Resourcing_Mode__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resourcing_Mode__c</fullName>
    <formula>If(ISBLANK(project_cloud__Allocation_Summary__r.project_cloud__Project__c), IF(ISBLANK(project_cloud__Allocation_Summary__r.project_cloud__BAU__c), null, &#39;timeBased&#39;), IF(TEXT(project_cloud__Allocation_Summary__r.project_cloud__Project__r.project_cloud__Methodology__c) == &#39;Kanban&#39;, &#39;timeBased&#39;, TEXT(project_cloud__Allocation_Summary__r.project_cloud__Project__r.project_cloud__Resourcing_Mode__c)))</formula>
    <inlineHelpText>The resourcing mode used. Determined by the parent Project.</inlineHelpText>
    <label>Resourcing Mode</label>
    <type>Text</type>
</CustomField>