unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <formula>project_cloud__Allocation_Summary__r.project_cloud__Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The start date of the Allocation Group record, calculated by the Calculated Start Date of the related Project Task.</inlineHelpText>
    <label>Start (Calculated)</label>
    <type>Date</type>
</CustomField>