unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Total_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Total_Subscriptions__c</fullName>
    <inlineHelpText>Rollup count of all underlying Allocation records</inlineHelpText>
    <label>Total Subscriptions</label>
    <summaryFilterItems>
        <field>project_cloud__Allocation__c.project_cloud__Load_Override__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Allocation__c.project_cloud__Allocation_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>