unpackaged/main/default/objects/project_cloud__Allocation_Group__c/fields/project_cloud__Work_Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Work Type represented by the Allocation Group</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>project_cloud__Work_Type__c</referenceTo>
    <relationshipLabel>Allocation Groups</relationshipLabel>
    <relationshipName>Allocation_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>